# ISFL-Statistical-Analysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notebooks/: 01_data_exploration.ipynb
src/isfl_epa/: cli.py  config.py  logging_config.py
src/isfl_epa/api/: app.py
src/isfl_epa/api/routes/: epa.py  players.py  plays.py  stats.py
src/isfl_epa/api/static/: drives.html  leaderboard.html  plays.html  teams.html  visualizations.html
src/isfl_epa/epa/: __init__.py  calculator.py  dataset.py  features.py  model.py  models.py  score_reconstruct.py
src/isfl_epa/parser/: play_parser.py  schema.py
src/isfl_epa/players/: __init__.py  overrides.yaml  registry.py
src/isfl_epa/scraper/: boxscore.py  boxscore_html.py  cache.py  game_results.py  http.py  pbp.py  pbp_html.py  roster.py
src/isfl_epa/stats/: __init__.py  aggregation.py  models.py
src/isfl_epa/storage/: database.py  parquet.py
tests/: api_test.py  cross_validate_test.py  epa_test.py  registry_test.py  stats_cross_validate_test.py  stats_test.py  storage_test.py  test_parser.py
