[project]
name = "isfl-epa"
version = "0.1.0"
description = "ISFL play-by-play analyzer and EPA calculator"
readme = "README.md"
authors = [
    { name = "Colin O'Neill", email = "coneill@anewclimate.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "lzstring>=1.0.4",
    "pandas>=2.2",
    "pydantic>=2.5",
    "beautifulsoup4>=4.12",
    "typer>=0.9",
    "rich>=13.0",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "ipykernel>=6.29",
]

[project.scripts]
isfl-epa = "isfl_epa.cli:app"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
